# agent-graph-jira

./: .env.example  Dockerfile  Makefile  README.md  pyproject.toml
data/: README.md
docs/prompts/: example-stories.yaml  intro.md
examples/: example-stories.yaml
notebooks/: README.md
src/: __init__.py  main.py
src/core/agent/: __init__.py  jira_agent.py
src/core/prompts/: __init__.py  story_expansion.py
src/core/tools/: __init__.py  jira_client.py
src/infrastructure/: __init__.py
src/infrastructure/llm_clients/: __init__.py  openai_client.py
src/infrastructure/vector_database/: __init__.py  chroma_client.py
src/utils/: config.py  logging.py
tests/: test_config.py
tools/: README.md
